--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -15,11 +15,14 @@
   </head>
   <header><%= render 'components/navbar' %></header>
   <body>
+    <div class="full-screen">
 <!--<p class="notice"><%= notice %></p>
     <p class="alert"><%= alert %></p> -->
     <%= yield %>
+    </div>
+    <%= render 'components/footer' %>
     <%= javascript_include_tag 'application' %>
     <%= javascript_pack_tag 'application' %>
   </body>
-  <footer><%= render 'components/footer' %></footer>
+
 </html>
