--- a/app/assets/stylesheets/pages/_jobs_show.scss
+++ b/app/assets/stylesheets/pages/_jobs_show.scss
@@ -2,13 +2,13 @@
 .container {
   margin-top: 70px;
   background-color: #F9F8F8;
-  border-radius: 3px;
+  border-radius: 10px;
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
-  min-height: calc(100vh - 90px);
+  min-height: 100%;
+  // min-height: calc(100vh - 90px);
   // margin-left: 50px;
   // margin-right: 50px;
 }
-
 
 .container p {
   color: black;
