--- a/app/assets/stylesheets/pages/_profil_show.scss
+++ b/app/assets/stylesheets/pages/_profil_show.scss
@@ -1,8 +1,11 @@
+
+
 .container {
 
   margin-top: 70px;
   background-color: #F4F4F4;
   min-height: calc(100vh - 90px);
+  background-color: #f4f4f4;
   // margin-left: 50px;
   // margin-right: 50px;
 }
@@ -18,9 +21,9 @@ h1 {
 .photo-profil {
   text-align: center;
   padding: 15px;
-  box-shadow: 5px 5px 2px 1px rgba(0, 0, 255, .2);
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
   background-color: #F9F8F8;
-  border-radius: 7px;
+  border-radius: 3px;
   margin-bottom: 10px;
 }
 .fa-user-circle {
@@ -39,9 +42,9 @@ h1 {
 }
 .info-contact {
   padding: 15px;
-  box-shadow: 5px 5px 2px 1px rgba(0, 0, 255, .2);
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
   background-color: #F9F8F8;
-  border-radius: 7px;
+  border-radius: 3px;
 }
 .info-contact p {
   font-family: 'Ubuntu', sans-serif;
@@ -61,9 +64,10 @@ h1 {
 }
 .favorite {
   padding: 15px;
-  box-shadow: 5px 5px 2px 1px rgba(0, 0, 255, .2);
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
   background-color: #F9F8F8;
-  border-radius: 7px;
+  border-radius: 3px;
+  margin-right: 15px;
 }
 
 .favorite-jobs {
@@ -77,9 +81,11 @@ h1 {
   font-family: 'Montserrat', sans-serif;
   color: #405F76;
   text-align: center;
+  margin-bottom: 10px;
+  font-size: 23px;
 }
 .favorite h3 i {
-  color: #405F76;
+  color: #489EA9;
   margin-right: 5px;
   text-align: right;
 }
@@ -92,9 +98,9 @@ h1 {
 }
 .my-missions {
   padding: 15px;
-  box-shadow: 5px 5px 2px 1px rgba(0, 0, 255, .2);
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
   background-color: #F9F8F8;
-  border-radius: 7px;
+  border-radius: 3px;
 }
 
 .mission-jobs {
@@ -106,9 +112,11 @@ h1 {
   border-bottom: 1px solid #499EAA;
   font-family: 'Montserrat', sans-serif;
   color: #405F76;
+  font-size: 23px;
+  margin-bottom: 10px;
 }
 .my-missions h3 i {
-  color: #405F76;
+  color: #489EA9;
   margin-right: 5px;
 }
 .my-missions p {
@@ -120,9 +128,9 @@ h1 {
 }
 .work-experiences {
   padding: 15px;
-  box-shadow: 5px 5px 2px 1px rgba(0, 0, 255, .2);
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
   background-color: #F9F8F8;
-  border-radius: 7px;
+  border-radius: 3px;
   margin-top: 10px;
   margin-bottom: 10px;
 }
@@ -130,4 +138,5 @@ h1 {
   border-bottom: 1px solid #499EAA;
   font-family: 'Montserrat', sans-serif;
   color: #405F76;
+  font-size: 23px;
 }
