--- a/app/assets/stylesheets/components/_map.scss
+++ b/app/assets/stylesheets/components/_map.scss
@@ -1,6 +1,6 @@
 #map {
   height: 100%;
-  z-index: 9999;
+  // z-index: 9999;
   border-radius: 5px;
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
   margin-top: 8.4vh;
