--- a/app/views/components/_card.html.erb
+++ b/app/views/components/_card.html.erb
@@ -32,7 +32,12 @@
   </div>
   <div class="lower-side d-flex justify-content-around mt-3">
     <div class="location"><i class="fas fa-map-marker-alt"></i> <%=job.zip_code_and_city %></div>
-    <%= button_to "> Détails", job_path(job.id), :class => "btn-flat", :method => :get %>
+    <%= link_to 'view job', job_path(job),  {:remote => true, 'data-toggle' =>  "modal", 'data-target' => '#modal-window', class: 'btn btn-flat'}  %>
+<!--     <div id="modal-window" class="modal hide fade" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+      <div class="modal-dialog" role="document">
+        <div class="modal-content"></div>
+      </div>
+    </div> -->
   </div>
 </div>
 
