--- a/app/views/components/_navbar.html.erb
+++ b/app/views/components/_navbar.html.erb
@@ -9,7 +9,7 @@
 
 
   <div class="collapse navbar-collapse" id="navbarSupportedContent">
-    <ul class="navbar-nav mr-auto">
+    <ul class="navbar-nav mr-auto mt-3">
       <% if user_signed_in? %>
         <li class="nav-item">
           <%= link_to "PROFIL", profil_path(current_user), class: "animoBorderLeftRight" %>
