--- a/app/assets/stylesheets/pages/_jobs_show.scss
+++ b/app/assets/stylesheets/pages/_jobs_show.scss
@@ -17,7 +17,7 @@
 .job-photo img {
   width: 250px;
   height: 150px;
-  object-fit: cover;
+  object-fit: contain;
   margin-top: 10px;
   background-color: #F9F8F8;
   border-radius: 3px;
@@ -44,8 +44,8 @@
 
 .job-content p {
   font-size: 12px;
-  line-height: 24px;
   text-align: justify;
+  line-height: 16px;
 }
 
 .fa-calendar-plus {
@@ -61,7 +61,7 @@
 }
 
 .title_job p {
-  font-size : 18px;
+  font-size : 16px;
   margin-left: 10px;
   color: grey;
   margin-top: -7px;
@@ -85,7 +85,7 @@
 
 .job-footer-infos i {
     color: #E26161;
-  font-size: 32px;
+  font-size: 16px;
 }
 
 .job-footer-infos p {
