--- a/app/views/components/_mini_card.html.erb
+++ b/app/views/components/_mini_card.html.erb
@@ -1,7 +1,7 @@
 <div class="mini-card">
-<%= image_tag job.logo %>
+  <%= image_tag job.logo %>
   <div class="mini-card-infos">
-    <h2><%= link_to job.title, job_path(job.id)  %></h2>
+    <h2><%= link_to job.title, job_path(job.id), {:remote => true, 'data-toggle' =>  "modal", 'data-target' => '#modal-window'}  %></h2>
     <div class="d-flex justify-content-between">
       <p><%= job.description %></p>
       <% if favorite %>
