--- a/app/views/profils/show.html.erb
+++ b/app/views/profils/show.html.erb
@@ -46,9 +46,13 @@
       <% end %>
       <div class="work-experiences">
         <h3> Mes expériences</h3>
-
       </div>
     </div>
   </div>
+  <div id="modal-window" class="modal hide fade" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+  <div class="modal-dialog" role="document">
+    <div class="modal-content"></div>
+  </div>
+</div>
 </div>
 
