--- a/app/assets/stylesheets/components/_modals.scss
+++ b/app/assets/stylesheets/components/_modals.scss
@@ -6,6 +6,7 @@
   font-weight: lighter;
   font-size: 16px;
   line-height: 20px;
+    padding: 30px 30px;
 }
 .modal-title {
   font-family: 'Ubuntu';
@@ -27,6 +28,7 @@
 .pre-scrollable {
   max-height: 120px;
   overflow-y: scroll;
+    box-shadow: 0px 3px 3px rgba(0, 0, 0, 0.15);
 }
 .modal-header {
   box-shadow: 0px 3px 3px rgba(0, 0, 0, 0.15);
