--- a/app/assets/stylesheets/components/_map.scss
+++ b/app/assets/stylesheets/components/_map.scss
@@ -1,5 +1,7 @@
 #map {
-  height: 80vh;
+  height: 70vh;
+  width: 70vh;
+  margin-left: 8vh;
   // z-index: 9999;
   border-radius: 5px;
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
