--- a/app/views/jobs/_show.html.erb
+++ b/app/views/jobs/_show.html.erb
@@ -4,35 +4,17 @@
 </div>
 <div class="modal-body">
   <div class="headers d-flex justify-content-around">
-    <div class="job-photo">
+    <div class="job-photo align-middle">
       <% if @job.logo == "" %>
         <%= image_tag "missing_logo.png" %>
       <% else %>
         <%= image_tag @job.logo %>
       <% end %>
     </div>
-    <div class="job-headers text-center">
-      <div class="title_job d-flex justify-content-between mt-3">
-        <div class="date-info d-flex">
-          <div class="column">
-            <div>
-              <!-- <i class="far fa-calendar-plus"></i> -->
-              <p>Début de contrat</p>
-            </div>
-            <div><p><%= @job.start_parsed %></p></div>
-          </div>
-          <div class="column">
-            <div>
-              <!-- <i class="far fa-calendar-plus"></i> -->
-              <p>Fin de contrat</p>
-            </div>
-              <p><%= @job.end_parsed %></p>
-          </div>
-        </div>
-
-        <div class="salary-info d-flex">
-          <i class="fas fa-euro-sign"></i>
-          <p><%= @job.salary.to_s + ' € par mois' %></p>
+    <div class="job-headers text-center align-middle">
+      <div class="title_job">
+        <div><%= @job.name %> recherche quelqu'un à partir du <strong><%= @job.start_parsed %></strong>
+          jusqu'au <strong><%= @job.end_parsed %></strong>
         </div>
       </div>
     </div>
@@ -40,7 +22,7 @@
   <div class="job-content-modals mt-3">
     <h3>Description</h3>
     <div class="pre-scrollable">
-      <p><%= @job.content %></p>
+      <p><%= simple_format(@job.content) %></p>
     </div>
   </div>
   <div class="job-footer-infos d-flex justify-content-around">
