--- a/app/views/jobs/index.html.erb
+++ b/app/views/jobs/index.html.erb
@@ -1,7 +1,7 @@
 
 <div class="main">
   <div class="wrapper">
-    <div class="row">
+    <div class="row justify-content-around">
       <div class="col-xs-12 col-xl-6">
         <div class="job-containers">
           <% if @jobs.empty? %>
