comment stylesheet_pack_tag

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,7 +10,7 @@
     <%= action_cable_meta_tag %>
     <link href="https://fonts.googleapis.com/css?family=Rancho&display=swap" rel="stylesheet">
     <%= stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track' => true  %>
-    <%= stylesheet_pack_tag 'application', media: 'all', 'data-turbolinks-track' => true  %> <!-- Uncomment if you import CSS in app/javascript/packs/application.js -->
+    <%# stylesheet_pack_tag 'application', media: 'all', 'data-turbolinks-track' => true  %> <!-- Uncomment if you import CSS in app/javascript/packs/application.js -->
     <%= favicon_link_tag asset_path('favicon.ico') %>
   </head>
   <header><%= render 'components/navbar' %></header>
