--- a/app/assets/stylesheets/pages/_jobs_show.scss
+++ b/app/assets/stylesheets/pages/_jobs_show.scss
@@ -61,7 +61,7 @@
 }
 
 .title_job p {
-  font-size : 16px;
+  font-size : 8x;
   margin-left: 10px;
   color: grey;
   margin-top: -7px;
@@ -105,6 +105,7 @@
 .contact p {
 font-size : 12px;
 }
+
 
 .contact, .address, .accommodation, .meal {
   margin-right: 10px;
