--- a/app/views/jobs/_show.html.erb
+++ b/app/views/jobs/_show.html.erb
@@ -3,18 +3,35 @@
   <button type="button" class="close" data-dismiss="modal">x</button>
 </div>
 <div class="modal-body">
-  <div class="headers d-flex justify-content-around">
-    <div class="job-photo align-middle">
+  <div class="modal-content-header d-flex align-middle">
+    <div class="job-photo-modal">
       <% if @job.logo == "" %>
         <%= image_tag "missing_logo.png" %>
       <% else %>
         <%= image_tag @job.logo %>
       <% end %>
     </div>
-    <div class="job-headers text-center align-middle">
-      <div class="title_job">
+    <div class="modal-content-header align-middle ml-6">
+      <div class="title_job text-center">
         <div><%= @job.name %> recherche quelqu'un à partir du <strong><%= @job.start_parsed %></strong>
           jusqu'au <strong><%= @job.end_parsed %></strong>
+        </div>
+        <div class="contact-info pl-3 pr-3">
+          <div class="contact-info-title">
+            <p>Infos contact :</p>
+          </div>
+          <div class="contact-info-content d-flex justify-content-between">
+            <p>Email: </p>
+            <p><%= @job.email_display.to_s %></p>
+          </div>
+          <div class="contact-info-content d-flex justify-content-between">
+            <p>Tel: </p>
+            <p><%= @job.telephone.to_s %></p>
+          </div>
+          <div class="contact-info-content d-flex justify-content-between">
+            <p>Adresse: </p>
+            <p><%= @job.address %></p>
+          </div>
         </div>
       </div>
     </div>
@@ -28,7 +45,7 @@
   <div class="job-footer-infos d-flex justify-content-around">
     <div class="address">
       <i class="far fa-map"></i>
-      <p> Lieu de travail</p>
+      <p>Lieu de travail</p>
     </div>
     <div class="accommodation">
       <i class="fas fa-bed"></i>
@@ -45,13 +62,6 @@
       <% else %>
         <p><%= 'Repas compris' %></p>
       <% end %>
-    </div>
-    <div class="contact">
-      <i class="far fa-id-card"></i>
-        <div class="infos">
-          <p><%= @job.email.to_s %></p>
-          <p><%= @job.telephone.to_s %></p>
-        </div>
     </div>
   </div>
 <div class="modal-footer justify-content-around mt-3">
