--- a/app/assets/stylesheets/components/_modals.scss
+++ b/app/assets/stylesheets/components/_modals.scss
@@ -25,9 +25,9 @@
   color: #364156;
   font-family: 'Montserrat';
   font-weight: lighter;
-  font-size: 16px;
-  line-height: 20px;
-    padding: 30px 30px;
+  font-size: 14px;
+  line-height: 14px;
+  padding: 30px 30px;
 }
 
 .modal-dialog {
@@ -63,4 +63,8 @@
 }
 .contact-info-content p {
   font-size: 14px;
+}
+.job-content-modals h3 {
+  font-size: 24px;
+  font-family: 'Ubuntu';
 }
