icons stacked successfully

--- a/app/views/jobs/_show.html.erb
+++ b/app/views/jobs/_show.html.erb
@@ -43,24 +43,28 @@
     </div>
   </div>
   <div class="job-footer-infos d-flex justify-content-around">
-    <div class="address">
-      <i class="far fa-map"></i>
-      <p>Lieu de travail</p>
-    </div>
     <div class="accommodation">
-      <i class="fas fa-bed"></i>
       <% if @job.accommodation == false %>
-        <p><%= 'Hébergement non inclus' %></p>
+        <span class="fa-stack fa-2x" style="font-size: 16px;">
+          <i class="fas fa-bed fa-stack-1x" style="color:Tomato"></i>
+          <i class="fas fa-ban fa-stack-2x" style="color:grey"></i>
+        </span>
+        <p>Hébergement non inclus</p>
       <% else %>
-        <p><%= 'Hébergement inclus' %></p>
+        <i class='fas fa-bed' style="color:Tomato"></i>
+        <p>Hébergement inclus</p>
       <% end %>
     </div>
     <div class="meal">
-      <i class="fas fa-utensils"></i>
       <% if @job.meal == false %>
-        <p><%= 'Repas non compris' %></p>
+      <span class="fa-stack fa-2x" style="font-size: 16px;">
+        <i class="fas fa-utensils fa-stack-1x" style="color:Tomato"></i>
+        <i class="fas fa-ban fa-stack-2x" style="color:grey"></i>
+      </span>
+        <p>Repas non compris</p>
       <% else %>
-        <p><%= 'Repas compris' %></p>
+        <i class="fas fa-utensils" style="color:Tomato"></i>
+        <p>Repas compris</p>
       <% end %>
     </div>
   </div>
