--- a/app/views/jobs/show.html.erb
+++ b/app/views/jobs/show.html.erb
@@ -5,7 +5,7 @@
         <div class="job-containers">
           <% @jobs.sample(8).each do |job| %>
             <div class="">
-              <%= render 'components/card', job: job %>
+              <%= render 'card', job: job %>
             </div>
           <% end %>
         </div>
