--- a/app/assets/stylesheets/pages/_jobs_show.scss
+++ b/app/assets/stylesheets/pages/_jobs_show.scss
@@ -88,8 +88,8 @@
   text-align: -webkit-center;
 }
 
-.job-footer-infos i {
-    color: #E26161;
+.job-footer-infos .toto {
+  color: #E26161;
   font-size: 16px;
 }
 
