small twitchs on displayed views

--- a/app/views/jobs/_show.html.erb
+++ b/app/views/jobs/_show.html.erb
@@ -42,7 +42,7 @@
       <%= simple_format(@job.content) %>
     </div>
   </div>
-  <div class="job-footer-infos d-flex justify-content-around">
+  <div class="job-footer-infos d-flex justify-content-around align-end">
     <div class="accommodation">
       <% if @job.accommodation == false %>
         <span class="fa-stack fa-2x" style="font-size: 16px;">
