--- a/app/assets/stylesheets/components/_mini_card.scss
+++ b/app/assets/stylesheets/components/_mini_card.scss
@@ -6,8 +6,13 @@
   display: flex;
   align-items: center;
   margin-bottom: 4px;
-  border-radius: 10px;
-  border: 1px solid #ccc!important;
+  // border-radius: 10px;
+  border: 1px solid #f2f2f2!important;
+  transition: 0.9s ease;
+}
+.mini-card:hover {
+  box-shadow: 0 0 15px rgba(100,100,100,0.9);
+  transition: 0.9s ease;
 }
 
 .mini-card img {
