--- a/app/views/jobs/_show.html.erb
+++ b/app/views/jobs/_show.html.erb
@@ -55,7 +55,7 @@
         <p>Hébergement inclus</p>
       <% end %>
     </div>
-    <div class="meal">
+    <div class="meal text-center">
       <% if @job.meal == false %>
       <span class="fa-stack fa-2x" style="font-size: 16px;">
         <i class="fas fa-utensils fa-stack-1x" style="color:Tomato"></i>
