--- a/app/assets/stylesheets/components/_mini_card.scss
+++ b/app/assets/stylesheets/components/_mini_card.scss
@@ -9,6 +9,7 @@
   // border-radius: 10px;
   border: 1px solid #f2f2f2!important;
   transition: 0.9s ease;
+  position: relative;
 }
 .mini-card:hover {
   box-shadow: 0 0 15px rgba(100,100,100,0.9);
@@ -46,4 +47,9 @@
 
 .mini-card .mini-card-infos {
   padding: 10px;
+}
+.trash {
+  position: absolute;
+  top: 5px;
+  right: 10px;
 }
