--- a/app/views/components/_banner.html.erb
+++ b/app/views/components/_banner.html.erb
@@ -4,7 +4,12 @@
       <%= image_tag "banner_title.png", class: "banner_title img-fluid mx-auto" %>
     </div>
     <p>Hey ! <br>Et si on t'aidait à trouver</p>
-    <h3>TON JOB <span style="background-color: darkcyan">  SAISONNIER</span> ?</h3>
+    <h3 class="ml6"><span class="text-wrapper"><span class="letters">TON JOB SAISONNIER ?</span>
+  </span>
+</h3></span>
+
+
+
     <div class="banner-button d-flex justify-content-center">
       <%= link_to "C'est parti !", new_preference_path(step: 0), class: "btn-gradient" %>
     </div>
