--- a/app/views/profils/show.html.erb
+++ b/app/views/profils/show.html.erb
@@ -1,9 +1,7 @@
-<header>
-  <div class="header__bg">
-  </div>
-</header>
-<div class="full-screen">
-  <div class="container">
+<!-- <header class="header__bg">
+</header> -->
+<div class="full-screen-profil">
+  <div class="container pt-4 pb-5">
     <div class="row">
       <div class="col-12">
         <h1> Bonjour <%= @user.first_name %> !</h1>
@@ -66,3 +64,4 @@
   </div>
 </div>
 </div>
+
