--- a/app/assets/stylesheets/components/_banner.scss
+++ b/app/assets/stylesheets/components/_banner.scss
@@ -13,12 +13,32 @@
 // .banner h1 {
 // }
 
+.ml6 {
+  position: relative;
+  font-weight: 900;
+  font-size: 3.3em;
+}
+
+.ml6 .text-wrapper {
+  position: relative;
+  display: inline-block;
+  padding-top: 0.2em;
+  padding-right: 0.05em;
+  padding-bottom: 0.1em;
+  overflow: hidden;
+}
+
+.ml6 .letter {
+  display: inline-block;
+  line-height: 1em;
+}
+
 .banner-container {
   padding-top: 50px;
   vertical-align: middle;
   justify-content: space-around;
   background-color: #499EAA;
-  height: 100vh;
+  height: 80vh;
 }
 
 .banner-title {
