--- a/app/assets/stylesheets/pages/_profil_show.scss
+++ b/app/assets/stylesheets/pages/_profil_show.scss
@@ -11,6 +11,21 @@
   transform-origin: top left;
 }
 
+.full-screen-profil {
+  background-image: url(user-background.png);
+}
+
+.col-12 {
+  margin-bottom: -70px;
+  margin-top: 30px;
+}
+
+.col-12 h1 {
+  font-family: 'Ubuntu';
+  padding: 0px;
+  color: #f9f8f8;
+}
+
 .col-3 {
   padding:0px;
 }
@@ -19,13 +34,14 @@
 
   display: flex;
   wrap: flex-wrap;
-  margin-top: 50px;
-  background-color: #F4F4F4;
+  margin-top: 0px;
+  margin-bottom: 0px;
+  // background-color: #F4F4F4;
   min-height: calc(100vh - 90px);
-  background-color: #f4f4f4;
   // margin-left: 50px;
   // margin-right: 50px;
   box-shadow:none;
+  background-color: transparent;;
 }
 
 h1 {
@@ -88,6 +104,11 @@ h1 {
   font-size: 24px;
   color: #489ea9;
 }
+
+.mission{
+background-color: cadetblue;
+}
+
 .favorite {
   padding: 15px;
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
