--- a/app/views/components/_navbar.html.erb
+++ b/app/views/components/_navbar.html.erb
@@ -23,7 +23,7 @@
         </li>
         <% else %>
         <li class="nav-item">
-          <%= link_to "CONNEXION", new_user_session_path, class: "nav-link" %>
+          <%= link_to "CONNEXION", new_user_session_path, class: "nav-item" %>
         </li>
       <% end %>
       </li>
