working on twin modals toggle

--- a/app/views/jobs/show.html.erb
+++ b/app/views/jobs/show.html.erb
@@ -18,3 +18,9 @@
     <div class="modal-content"></div>
   </div>
 </div>
+
+<div id="modalContactForm" class="modalApply hide fade" role="dialog" aria-labelledby="myModalLabelApply" aria-hidden="true">
+  <div class="modal-dialog" role="document">
+    <div class="modal-content"></div>
+  </div>
+</div>
