--- a/app/views/jobs/_show.html.erb
+++ b/app/views/jobs/_show.html.erb
@@ -69,8 +69,6 @@
     </div>
   </div>
 <div class="modal-footer justify-content-around mt-3">
-
-
     <div>
       <%= link_to "Sauvegarder", job_favorites_path(job_id: @job.id),
               onclick:"swal('Annonce sauvegardée !', 'Tu pourras la retrouver dans ton profil.', 'success')",
@@ -79,10 +77,17 @@
               :class => "btn-flat" %>
     </div>
     <div>
+      <div class="text-center">
+        <a href="" class="btn btn-default btn-rounded mb-4" data-dismiss="modal" onclick="modalContactForm" data-toggle="modalContactForm" data-target="#modalContactForm">Launch
+          Modal Contact Form</a>
+      </div>
+
       <%= link_to "Postuler", job_missions_path(@job),
               onclick:"swal('Candidature envoyée !', 'On croise les doigts pour toi !', 'success')",
               method: :post,
               :id => "sweet-alert",
               :class => "btn-flat" %>
+
+
     </div>
 </div>
