--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -24,6 +24,6 @@
       et de trouver rapidement LE job qui nous convient... Mais grâce à <%= image_tag "logo.png" %> et à notre
       algorithme révolutionnaire, trouve en quelques instants une sélection
       d'annonces qui <span>TE</span> correspondent !</p>
-      <%= image_tag "data_guy.png", class: "home-png-right"%>
+      <%= image_tag "data_guy.png", class: "home-png-right mt-5"%>
   </div>
 </div>
