--- a/app/views/jobs/_show.html.erb
+++ b/app/views/jobs/_show.html.erb
@@ -69,7 +69,7 @@
     </div>
   </div>
 <div class="modal-footer justify-content-around mt-3">
-  <button class="btn btn-primary" type="button" data-toggle="collapse" data-target="#collapseExample" aria-expanded="false" aria-controls="collapseExample">
+<!--   <button class="btn btn-primary" type="button" data-toggle="collapse" data-target="#collapseExample" aria-expanded="false" aria-controls="collapseExample">
     Cette offre te plait?
   </button>
   <div class="collapse" id="collapseExample">
@@ -79,7 +79,7 @@
         <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
       </div>
     </div>
-  </div>
+  </div> -->
 
     <div>
       <%= link_to "Sauvegarder", job_favorites_path(job_id: @job.id),
@@ -89,10 +89,10 @@
               :class => "btn-flat" %>
     </div>
     <div>
-      <div class="text-center">
+<!--       <div class="text-center">
         <a href="" class="btn btn-default btn-rounded mb-4" data-dismiss="modal" onclick="modalContactForm" data-target="#modalContactForm">Launch
           Modal Contact Form</a>
-      </div>
+      </div> -->
 
       <%= link_to "Postuler", job_missions_path(@job),
               onclick:"swal('Candidature envoyée !', 'On croise les doigts pour toi !', 'success')",
