--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,14 +10,13 @@
     <%= action_cable_meta_tag %>
     <link href="https://fonts.googleapis.com/css?family=Rancho&display=swap" rel="stylesheet">
     <%= stylesheet_link_tag 'application', media: 'all' %>
-    <%# stylesheet_pack_tag 'application', media: 'all', 'data-turbolinks-track' => true  %> <!-- Uncomment if you import CSS in app/javascript/packs/application.js -->
+    <%= stylesheet_pack_tag 'application', media: 'all' %> <!-- Uncomment if you import CSS in app/javascript/packs/application.js -->
     <%= favicon_link_tag asset_path('favicon.ico') %>
   </head>
   <header><%= render 'components/navbar' %></header>
   <body>
     <div class="full-screen">
-<!--<p class="notice"><%= notice %></p>
-    <p class="alert"><%= alert %></p> -->
+
     <%= yield %>
     </div>
     <%= render 'components/footer' %>
@@ -28,4 +27,4 @@
 
 </html>
 
-<!-- , 'data-turbolinks-track' => true -->
+
