--- a/app/assets/stylesheets/pages/_profil_show.scss
+++ b/app/assets/stylesheets/pages/_profil_show.scss
@@ -12,7 +12,7 @@
 }
 
 .full-screen-profil {
-  background-image: url(user-background.png);
+  background-image: asset-url(user-background.png);
 }
 
 .col-12 {
