--- a/app/views/profils/show.html.erb
+++ b/app/views/profils/show.html.erb
@@ -52,8 +52,7 @@
           </div>
         <% end %>
         <div class="work-experiences">
-          <h3> Mes expériences</h3>
-
+          <%= render "work_experiences/show" %>
         </div>
       </div>
     </div>
