--- a/app/views/profils/show.html.erb
+++ b/app/views/profils/show.html.erb
@@ -12,6 +12,11 @@
             <div class="photo-profil">
               <i class="fas fa-user-circle"></i>
               <p><%= @user.biograophy %></p>
+                <div class="social-media-links">
+                  <i class="fab fa-linkedin"></i>
+                  <i class="fab fa-facebook-square"></i>
+                  <i class="fas fa-at"></i>
+                </div>
             </div>
           </div>
           <div class="info-contact">
@@ -53,7 +58,6 @@
         <% end %>
         <div class="work-experiences">
           <h3> Mes expériences</h3>
-
         </div>
       </div>
     </div>
