--- a/app/assets/stylesheets/pages/_profil_show.scss
+++ b/app/assets/stylesheets/pages/_profil_show.scss
@@ -173,6 +173,9 @@ background-color: cadetblue;
   line-height: normal;
   padding:5px;
 }
+
+//---------------- WORK EXPERIENCES -------------
+
 .work-experiences {
   padding: 15px;
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
@@ -181,12 +184,26 @@ background-color: cadetblue;
   margin-top: 10px;
   margin-bottom: 10px;
 }
+
 .work-experiences h3 {
   border-bottom: 1px solid #499EAA;
   font-family: 'Montserrat', sans-serif;
   color: #405F76;
   font-size: 23px;
 }
+
+.experience-title i, h5 {
+  vertical-align: middle;
+  color: #607793;
+  text-transform: capitalize;
+  font-size: 20px;
+}
+
+.experience-entreprise {
+  margin-left: 3px;
+}
+
+// ----------------------------------------------
 
 .button {
   color: white;
@@ -202,4 +219,9 @@ background-color: cadetblue;
 .button:hover {
   background: #66BECB;
   color: white;
+}
+
+.social-media-links i {
+  font-size: 22px;
+  color: #607793;
 }
