--- a/app/views/preferences/new.html.erb
+++ b/app/views/preferences/new.html.erb
@@ -2,7 +2,7 @@
   <div class="header__bg">
   </div>
   <div class="head-quizz">
-    <div class="text"><%= raw(@step_infos[:text]) %></div>
+    <div class="text-rotate"><%= raw(@step_infos[:text]) %></div>
     <h1><%= @step_infos[:title] %></h1>
   </div>
 </header>
