--- a/app/assets/stylesheets/components/_modals.scss
+++ b/app/assets/stylesheets/components/_modals.scss
@@ -47,6 +47,7 @@
   max-height: 180px;
   overflow-y: scroll;
   box-shadow: 0px 3px 3px rgba(0, 0, 0, 0.15);
+  padding: 10px 10px;
 }
 
 .contact-info {
@@ -67,4 +68,26 @@
 .job-content-modals h3 {
   font-size: 24px;
   font-family: 'Ubuntu';
+}
+.button-toggle {
+  font-size: 16px;
+  font-family: 'Montserrat';
+  text-decoration: none;
+  color: white;
+
+}
+.button-toggle:hover {
+  font-size: 16px;
+  font-family: 'Montserrat';
+  text-decoration: none;
+  color: white;
+
+}
+.card-header {
+  background-color: #499DAA;
+  border-radius: 5px;
+}
+.apply-btn {
+  float: center;
+  margin-top: 20px;
 }
