--- a/app/assets/stylesheets/pages/_jobs_show.scss
+++ b/app/assets/stylesheets/pages/_jobs_show.scss
@@ -94,9 +94,9 @@
 }
 
 .job-footer-infos p {
-  margin-top: 10px;
-  margin-right: 10px;
-  margin-right: 10px;
+  margin-top: 5px;
+  // margin-right: 10px;
+  // margin-right: 10px;
   font-size : 16px;
   color: grey;
   line-height: normal;
@@ -122,3 +122,6 @@ font-size : 12px;
   padding: 25px;
 }
 
+.accordion {
+  border-radius: 5px !important;
+}
