--- a/app/views/work_experiences/_show.html.erb
+++ b/app/views/work_experiences/_show.html.erb
@@ -1,7 +1,7 @@
 <div class="alumnus-panel">
 
-
-  <div class="alumnus-panel-content">
+  <p>toto</p>
+<!--   <div class="alumnus-panel-content">
     <div class="d-flex justify-content-between align-items-center">
       <h3 class="mt-2">Experience</h3>
     </div>
@@ -128,5 +128,5 @@
       </div>
     </div>
 
-  </div>
+  </div> -->
 </div>
