--- a/app/assets/stylesheets/pages/_profil_show.scss
+++ b/app/assets/stylesheets/pages/_profil_show.scss
@@ -34,18 +34,12 @@
   padding:0px;
 }
 
-.container {
-
-  display: flex;
-  wrap: flex-wrap;
-  margin-top: 0px;
-  margin-bottom: 0px;
-  // background-color: #F4F4F4;
-  min-height: calc(100vh - 90px);
-  // margin-left: 50px;
-  // margin-right: 50px;
-  box-shadow:none;
-  background-color: transparent;;
+.container-profile-show {
+  min-height:       calc(100vh - 90px);
+  width:            1000px;
+  margin:           0 auto;
+  box-shadow:       none;
+  background-color: transparent;
 }
 
 h1 {
@@ -255,4 +249,9 @@ background-color: cadetblue;
   border: 5px solid #D3D3D3;
   top: 15px;
   border-radius: 50%;
+}
+
+.my-experiences {
+  background-color: white;
+  margin-top: 10px;
 }
