--- a/app/views/profils/show.html.erb
+++ b/app/views/profils/show.html.erb
@@ -1,11 +1,11 @@
 <!-- <header class="header__bg">
 </header> -->
 <div class="full-screen-profil">
-  <div class="container pt-4 pb-5">
+  <div class="container-profile-show pt-4 pb-5">
+    <div class="text-center">
+      <h1> Bonjour <%= @user.first_name %> !</h1>
+    </div>
     <div class="row">
-      <div class="col-12">
-        <h1> Bonjour <%= @user.first_name %> !</h1>
-      </div>
       <div class="col-3">
         <div class="contact ">
           <div class="bio">
@@ -50,42 +50,20 @@
               </div>
             </div>
           </div>
-        <% end %>
-
-        <!-- COLLAPSE DÉROULANT -->
-
-<!--         <div class="work-experiences">
-          <p>
-            <a class="btn-flat" data-toggle="collapse" href="#collapseExample" role="button" aria-expanded="false" aria-controls="collapseExample">
-            DÉTAILS
-            </a>
-          </p>
-          <div id="collapseExample" class="collapse">
-            <div class="card card-body">
-              <%#= render "work_experiences/show" %>
-              <p>toto</p>
+          <div class="my-experiences">
+            <div id="button-toogle-work-experiences" class="btn btn-flat w-100">
+              Click Me
             </div>
+            <%= render "work_experiences/show" %>
           </div>
-        </div> -->
-        <p>
-          <button class="btn btn-primary" type="button" data-toggle="collapse" data-target="#collapseExample" aria-expanded="false" aria-controls="collapseExample">
-            Button with data-target
-          </button>
-        </p>
-        <div class="collapse" id="collapseExample">
-          <div class="card card-body">
-            Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. Nihil anim keffiyeh helvetica, craft beer labore wes anderson cred nesciunt sapiente ea proident.
-          </div>
-        </div>
-
-      <!-- COLLAPSE ESSAI -->
+        <% end %>
+      </div>
 
     </div>
   </div>
   <div id="modal-window" class="modal hide fade" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
-  <div class="modal-dialog" role="document">
-    <div class="modal-content"></div>
+    <div class="modal-dialog" role="document">
+      <div class="modal-content"></div>
+    </div>
   </div>
 </div>
-</div>
-
