--- a/app/assets/stylesheets/pages/_jobs_index.scss
+++ b/app/assets/stylesheets/pages/_jobs_index.scss
@@ -15,3 +15,74 @@
 //     background-size: cover;
 //   }
 // }
+.job-containers h1 {
+  font-family: "Montserrat";
+  color: white;
+  font-size: 24px;
+  font-weight: 700;
+}
+
+.job-containers {
+  margin-top: 88px;
+}
+.container-logo {
+  padding-top: 180px;
+  padding-right: 400px;
+}
+
+.thoughtfull_girl-image {
+  max-height: 250px;
+  padding-left: 150px;
+}
+
+.thoughtfull_girl-image:hover {
+  max-height: 250px;
+  opacity: 0.9;
+}
+
+
+.aleatoire {
+  max-height: 250px;
+  padding-left: 40px;
+}
+
+.aleatoire:hover {
+  max-height: 250px;
+  opacity: 0.9;
+}
+
+.container-text {
+
+}
+
+.container-element {
+  // padding-right: 203px;
+}
+
+.container-text h3 {
+  padding-left: 150px;
+  font-family: 'Rancho';
+}
+.container-text h2 {
+  font-family: 'Rancho';
+}
+
+.title-quizz {
+  font-family: 'Rancho';
+  font-size: 35px;
+  color: #364156;
+  padding-left: 179px;
+  // margin-left: 217px;
+}
+
+.title-aleatoire {
+  font-family: 'Rancho';
+  font-size: 35px;
+  color: #364156;
+  padding-right: 124px;
+
+  // padding-left: 185px;
+}
+.container-text {
+
+}
