--- a/app/assets/stylesheets/pages/_profil_show.scss
+++ b/app/assets/stylesheets/pages/_profil_show.scss
@@ -228,6 +228,14 @@ background-color: cadetblue;
   border-radius: 3px;
   border: 1px solid #F7F7F7;
 }
+.alumnus-experience .experience-img img{
+  width: 60px;
+  height: 60px;
+  background-size: cover;
+  background-position: center;
+  border-radius: 3px;
+  border: 1px solid #F7F7F7;
+}
 .alumnus-experience .experience-details p {
   margin: 0;
 }
@@ -243,7 +251,6 @@ background-color: cadetblue;
   font-weight: lighter;
 }
 .multiple .alumnus-experience .experience-line::before {
-  content: '';
   position: absolute;
   left: 26px;
   border: 5px solid #D3D3D3;
@@ -252,6 +259,21 @@ background-color: cadetblue;
 }
 
 .my-experiences {
-  background-color: white;
+  background-color: #f9f8f8;
   margin-top: 10px;
+  border-radius: 5px;
+}
+
+.my-experiences h3 {
+  padding: 10px;
+  border-bottom: 1px solid #499EAA;
+  font-family: 'Montserrat', sans-serif;
+  color: #405F76;
+  font-size: 18px;
+  margin-bottom: 14px;
+}
+
+.deroulable {
+  margin: 0 auto;
+  width: 80%;
 }
