--- a/app/views/profils/show.html.erb
+++ b/app/views/profils/show.html.erb
@@ -50,11 +50,28 @@
               </div>
             </div>
           </div>
+
+
           <div class="my-experiences">
-            <div id="button-toogle-work-experiences" class="btn btn-flat w-100">
-              Click Me
+            <h3>Expériences professionnelles</h3>
+            <p>Dernière expérience enregistrée</p>
+            <div class="alumnus-experience">
+              <div class="experience-img">
+                <%= image_tag @user.work_experiences.last.photo %>
+              </div>
+              <div class="experience-details">
+                <p class="experience-title"><%= @user.work_experiences.last.poste_intitulé %></p>
+                <p class="experience-corp-name"><%= @user.work_experiences.last.entreprise %>, <%= @user.work_experiences.last.durée %> mois</p>
+                <p class="experience-dates"><%= @user.work_experiences.last.description %></p>
+              </div>
             </div>
+
+
+            <button id="button-toogle-work-experiences" class="btn btn-flat deroulable d-flex justify-content-center mt-3">
+              Voir toutes les expériences de <%= @user.first_name %>
+            </button>
             <%= render "work_experiences/show" %>
+            </div>
           </div>
         <% end %>
       </div>
