--- a/app/views/work_experiences/_show.html.erb
+++ b/app/views/work_experiences/_show.html.erb
@@ -1,9 +1,9 @@
-<div class="alumnus-panel bg-white">
+<div class="alumnus-panel">
 
 
   <div id="work-experiences" class="alumnus-panel-content" style="display: none">
     <div class="d-flex justify-content-between align-items-center">
-      <h3 class="mt-2">Experience</h3>
+      <!-- <h3 class="mt-2">Experience</h3> -->
     </div>
     <div class="alumnus-experiences">
       <div class="alumnus-experience">
