--- a/app/views/profils/show.html.erb
+++ b/app/views/profils/show.html.erb
@@ -24,7 +24,7 @@
               <p><i class="fas fa-map-marker-alt"></i><%= @user.address %></p>
               <div class="profil-btns d-flex justify-content-around">
               <button type="button" class="button">Éditer</button>
-              <button type="button" class="button">Supprimer</button>
+              <button type="button" class="btn btn-outline-secondary">Supprimer</button>
               </div>
             </div>
           </div>
@@ -53,7 +53,7 @@
 
 
           <div class="my-experiences">
-            <h3>Expériences professionnelles</h3>
+            <h3><i class="fas fa-user-tie"></i>   Expériences professionnelles</h3>
             <p>Dernière expérience enregistrée</p>
             <div class="alumnus-experience">
               <div class="experience-img">
