--- a/app/assets/stylesheets/pages/_profil_show.scss
+++ b/app/assets/stylesheets/pages/_profil_show.scss
@@ -212,7 +212,12 @@ background-color: cadetblue;
 .alumnus-experience {
   display: flex;
   align-items: center;
-  margin-top: 24px;
+  margin-top: 15px;
+  margin-right: 20px;
+  border-radius: 5px;
+  // background-color: #efefef;
+  margin-left: 20px;
+  margin-bottom: 10px;
 }
 .multiple {
   margin-top: 24px;
@@ -220,6 +225,7 @@ background-color: cadetblue;
 .alumnus-experience .experience-details {
   margin-left: 12px;
 }
+
 .alumnus-experience .experience-img {
   width: 60px;
   height: 60px;
@@ -227,7 +233,9 @@ background-color: cadetblue;
   background-position: center;
   border-radius: 3px;
   border: 1px solid #F7F7F7;
+  margin-left:20px;
 }
+
 .alumnus-experience .experience-img img{
   width: 60px;
   height: 60px;
@@ -236,20 +244,29 @@ background-color: cadetblue;
   border-radius: 3px;
   border: 1px solid #F7F7F7;
 }
-.alumnus-experience .experience-details p {
-  margin: 0;
-}
+
 .alumnus-experience .experience-title {
   font-weight: bold;
-  color: cadetblue;
+  font-size: 16px;
+  color: slategrey;
 }
+
 .alumnus-experience .experience-details p {
   margin: 0;
 }
 
 .alumnus-experience .experience-corp-name {
   font-weight: lighter;
+  font-size: 14px;
+  color: grey;
 }
+
+.alumnus-experience .experience-dates {
+  font-size: 12px;
+  color: darkgrey;
+  font-weight: lighter;
+}
+
 .multiple .alumnus-experience .experience-line::before {
   position: absolute;
   left: 26px;
@@ -271,6 +288,19 @@ background-color: cadetblue;
   color: #405F76;
   font-size: 18px;
   margin-bottom: 14px;
+  margin-left: 20px;
+  margin-right: 20px;
+}
+
+.my-experiences i {
+  color: #489EA9;
+  margin-right: 5px;
+}
+
+.my-experiences p {
+  margin-left: 20px;
+  color: #499EAA;
+  font-weight: bold;
 }
 
 .deroulable {
