--- a/app/views/work_experiences/_show.html.erb
+++ b/app/views/work_experiences/_show.html.erb
@@ -96,8 +96,9 @@
         </div>
       </div>
     </div>
-    <hr>
-    <h3>Education</h3>
+  <!--   <hr> -->
+
+    <h3><i class="fas fa-graduation-cap"></i> Education</h3>
     <div class="alumnus-experiences">
       <div class="alumnus-experience">
         <div class="experience-img" style="background-image: url(https://res.cloudinary.com/wagon/image/upload/v1546728257/sccxigmoahemslr5mimm.jpg)">
