creation uploader de cv

--- a/app/views/profils/show.html.erb
+++ b/app/views/profils/show.html.erb
@@ -22,6 +22,13 @@
               <p><i class="fas fa-flag"></i> <%= @user.nationality %></p>
               <p><i class="fas fa-birthday-cake"></i> <%= @user.age %> ans</p>
               <p><i class="fas fa-map-marker-alt"></i><%= @user.address %></p>
+              <%= simple_form_for @user do |f| %>
+                <!-- [...] -->
+                <%= f.input :cv %>
+                <%= f.input :cv_cache, as: :hidden %>
+                <%= f.button :submit %>
+                <!-- [...] -->
+              <% end %>
               <div class="profil-btns d-flex justify-content-around">
               <button type="button" class="button">Éditer</button>
               <button type="button" class="btn btn-outline-secondary">Supprimer</button>
