favorite icon in place with no ajax

--- a/app/views/profils/show.html.erb
+++ b/app/views/profils/show.html.erb
@@ -24,7 +24,7 @@
               <p><i class="fas fa-map-marker-alt"></i><%= @user.address %></p>
               <div class="profil-btns d-flex justify-content-around">
               <button type="button" class="button">Éditer</button>
-              <button type="button" class="button">Supprimer</button>
+              <button type="button" class="btn btn-outline-secondary">Supprimer</button>
               </div>
             </div>
           </div>
