--- a/app/views/jobs/_show.html.erb
+++ b/app/views/jobs/_show.html.erb
@@ -1,12 +1,19 @@
-<div class="modal-header d-flex justify-content-between">
-  <div><h4 class="modal-title" id="myModalLabel"><%= @job.title %></h4></div>
+<div class="modal-header d-flex justify-content-between align-middle">
   <div>
-      <%= link_to "Sauvegarder", job_favorites_path(job_id: @job.id),
+    <h4 class="modal-title" id="myModalLabel"><%= @job.title %></h4>
+  </div>
+  <div class="d-flex align-middle">
+    <% if @job.favorite?(current_user) %>
+      <i class="fas fa-heart red-icon"></i>
+      <button type="button" class="close ml-3" data-dismiss="modal">X</button>
+    <% else %>
+      <%= link_to '<i class="far fa-heart"></i>'.html_safe, job_favorites_path(job_id: @job.id),
               onclick:"swal('Annonce sauvegardée !', 'Tu pourras la retrouver dans ton profil.', 'success')",
               method: :post,
               :id => "sweet-alert",
-              :class => "btn-flat mt-3" %>
+              :class => "red-icon" %>
       <button type="button" class="close ml-3" data-dismiss="modal">X</button>
+    <% end %>
     </div>
 
 </div>
